# Hybrid-Algorithm-for-Molecular-Spectra

./: LICENSE  Manifest.toml  README.md
hybridqc/: Project.toml  pyproject.toml
hybridqc/data/plot_data/: scaling_samples_peak_errors.json  small_systems_plot_data.json
hybridqc/plots/: plot_energy_levels.py  plot_fourier_spectra.py  plot_scaling_samples.py
hybridqc/src/julia/: DMRG_groundstate.jl  MPSutils.jl  QuantumEvolution.jl  sample_perturbed_state.jl
hybridqc/src/python/: __init__.py
hybridqc/src/python/generate_hamiltonian/: CASCI_pyscf.py  __init__.py  convert_fcidump_to_json.py  pyscf_to_nk.py
hybridqc/src/python/subspace_evolution/: RunAlgorithm.py  Samples_RunAlgorithm.py  __init__.py
hybridqc/src/python/tensor_network/: __init__.py  evolution.py  retrieve_data.py
